# rss-alligator-rs

./: .gitignore  Cargo.toml
prisma/: schema.prisma
src/: db.rs  feed.rs  feed_parser.rs  main.rs
