[package]
name = "rss-alligator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = "0.11.18"
rss = "2.0.6"
serde_json = "1.0.105"
tokio = {version="1.32.0", features=["full"]}
